--- a/package.json
+++ b/package.json
@@ -3,17 +3,27 @@
   "version": "0.0.1",
   "description": "A project to help learn backend development",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
+    "learn",
     "backend",
     "node",
     "express",
     "mongodb"
   ],
   "author": "Preyan Bhowmick",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
+  }
 }
