--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "author": "Preyan Bhowmick",
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "prettier": "^3.2.2"
   },
   "dependencies": {
     "cors": "^2.8.5",
