Update .env.sample and user.controller.js

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,6 @@
-PORT=
+NODE_ENV=production|development
+
+PORT= 
 MONGODB_URI=
 CORS_ORIGIN=
 
@@ -7,3 +9,10 @@ ACCESS_TOKEN_EXPIRY=
 
 REFRESH_TOKEN_SECRET=
 REFRESH_TOKEN_EXPIRY=
+
+
+CLOUDINARY_URL= #Not needed if you have the following
+CLOUDINARY_CLOUN_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+
