Update environment variables and add note validator

--- a/.env.sample
+++ b/.env.sample
@@ -1,16 +1,20 @@
-NODE_ENV=production|development
+NODE_ENV= #production|development
 
-PORT= 
+PORT=
+#https://www.mongodb.com/cloud/atlas
 MONGODB_URI=
+
 CORS_ORIGIN=
 
+#https://jwt.io/
 ACCESS_TOKEN_SECRET=
 ACCESS_TOKEN_EXPIRY=
 
+#https://jwt.io/
 REFRESH_TOKEN_SECRET=
 REFRESH_TOKEN_EXPIRY=
 
-
+#https://console.cloudinary.com/
 CLOUDINARY_URL= #Not needed if you have the following
 CLOUDINARY_CLOUN_NAME=
 CLOUDINARY_API_KEY=
