Update .env.sample and readme.md, and user.route.js

--- a/.env.sample
+++ b/.env.sample
@@ -1,22 +1,23 @@
-NODE_ENV= #production|development
+NODE_ENV= #production|development|test
+PORT= #3000
 
-PORT=
 #https://www.mongodb.com/cloud/atlas
-MONGODB_URI=
+MONGODB_URI= #mongodb://localhost:27017/your-database-name
 
-CORS_ORIGIN=
-
-#https://jwt.io/
-ACCESS_TOKEN_SECRET=
-ACCESS_TOKEN_EXPIRY=
+CORS_ORIGIN= #http://localhost:3000 | https://your-frontend-url
 
 #https://jwt.io/
-REFRESH_TOKEN_SECRET=
-REFRESH_TOKEN_EXPIRY=
+ACCESS_TOKEN_SECRET= #your-secret-key
+ACCESS_TOKEN_EXPIRY= #15m
+
+#https://jwt.io/
+REFRESH_TOKEN_SECRET= #your-secret-key
+REFRESH_TOKEN_EXPIRY= #7d
 
 #https://console.cloudinary.com/
-CLOUDINARY_URL= #Not needed if you have the following
-CLOUDINARY_CLOUN_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+CLOUDINARY_URL= #cloudinary://your-api-key:your-api-secret@your-cloud-name
+CLOUDINARY_CLOUD_NAME= #your-cloud-name
+CLOUDINARY_API_KEY= #your-api-key
+CLOUDINARY_API_SECRET= #your-api-secret
+
 
