--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
+    "format": "prettier --write \"src/**/*.js\"",
+    "lint": "eslint \"src/**/*.js\"",
+    "test": "jest",
+    "coverage": "nyc --reporter=text jest",
+    "report": "nyc report --reporter=text-lcov | coveralls"
   },
   "keywords": [
     "backend",
@@ -17,7 +22,9 @@
   "author": "Preyan Bhowmick",
   "license": "MIT",
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
+    "nyc": "^15.1.0",
     "prettier": "^3.2.2"
   },
   "dependencies": {
