--- a/package.json
+++ b/package.json
@@ -8,36 +8,9 @@
     "start": "node src/index.js",
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
     "format": "prettier --write \"src/**/*.js\"",
-    "lint": "eslint \"src/**/*.js\"",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
-    "coverage": "nyc --reporter=text jest",
-    "report": "nyc report --reporter=text-lcov | coveralls"
+    "lint": "eslint \"src/**/*.js\""
   },
-  "jest": {
-    "testEnvironment": "node",
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "src/**/*.js"
-    ],
-    "coverageReporters": [
-      "text",
-      "lcov"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 90,
-        "functions": 90,
-        "lines": 90,
-        "statements": 90
-      }
-    },
-    "moduleFileExtensions": [
-      "js"
-    ],
-    "transform": {}
-  },
-  "keywords": [
+    "keywords": [
     "backend",
     "node",
     "express",
@@ -46,9 +19,7 @@
   "author": "Preyan Bhowmick",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
-    "nyc": "^15.1.0",
     "prettier": "^3.2.2"
   },
   "dependencies": {
