--- a/.github/workflows/test_pipeline.yml
+++ b/.github/workflows/test_pipeline.yml
@@ -25,7 +25,7 @@ jobs:
           cache-dependency-path: '**/package-lock.json'
   
       - name: Install dependencies
-        run: npm ci
+        run: npm i
 
       - name: Run tests
         run: npm test
