--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "Preyan Bhowmick",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "prettier": "^3.2.2",
