--- a/.github/workflows/test_pipeline.yml
+++ b/.github/workflows/test_pipeline.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Setup Node
+      - name: Setup Node Env
         uses: actions/setup-node@v4
         with:
           node-version: '20'
@@ -27,11 +27,8 @@ jobs:
       - name: Install dependencies
         run: npm i
 
-      - name: Run tests
-        run: npm test
-
-      - name: Run checks
+      - name: Run lint checks
         run: npm run lint
 
-      - name: Run tests
+      - name: Run tests checks
         run: npm test
